  CompetitiveDISIBuilder subtypes. (Alan Woodward)

* GITHUB#15636: Introduce TermsEnum.preferSeekExact(). Update and delete processing obey this setting,
  allowing bloom or other approximate membership filters to apply in these paths. (Trevor McCulloch)

* GITHUB#15723: Add hook for LRUQueryCache to allow custom population strategies (Nhat Nguyen)

New Features
---------------------

* GITHUB#15740: Add NumericFieldStats utility for retrieving global numeric field statistics
  (min, max, doc count) from index metadata structures. Migrate SortedNumericDocValuesRangeQuery
  to use this API, fixing the rewrite optimization for fields with PointValues but no skip index.
  (Salvatore Campagna)

Improvements
---------------------
* GITHUB#15753: Add Case Insensitive makeChar and makeString to Automata. (John Wagster)

Optimizations
---------------------
* GITHUB#15637: Lazily allocate ByteArrayDataInputs in SegmentTermsEnumFrame#15637 (Misha Dmitriev)

* GITHUB#15718 Skip per-document stored field reads on sorted indices when no stored fields are present (Francisco Fernández Castaño)

* GITHUB#15729: Lucene90DocValuesProducer is not prefetching any data for DocValueSkippers anymore (Alexander Reelsen)

Bug Fixes
---------------------
* GITHUB#15668: Fix UnsupportedOperationException in WeightedSpanTermExtractor by
  implementing getFieldInfos in DelegatingLeafReader. (Simranjeet Singh)

* GITHUB#15702: Fix Potential NullPointException in BytesRefHash initialization#15702 (tyronecai)

Other
---------------------
* GITHUB#15586: Document that scoring and ranking may change across major Lucene versions, and that applications requiring stable ranking should explicitly configure Similarity. (Parveen Saini)

======================= Lucene 10.4.0 =======================

API Changes
---------------------
* GITHUB#15497: Singleton for MatchAllDocsQuery & MatchNoDocsQuery. (hossman)

* GITHUB#15149: Introduce NumericDocValues#longValues to help speed up the